<resources>
    <string name="app_name">Ulendo App</string>
    <string name="grab_your_new_ride">Grab your new ride</string>
    <string name="work">Work</string>
    <string name="school">School</string>
    <string name="homeUser">Home</string>
    <string name="new_ride">New Ride</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Conform Password</string>
    <string name="confirm">CONFIRM</string>
    <string name="new_password">New Password</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="ulendo">ULENDO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">CLose navigation drawer</string>
    <string name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">Update</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="full_name">Full Name</string>
    <string name="change_avatar">Change avatar</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="national_id">National ID</string>
    <string name="email_address">Email Address</string>
    <string name="driver_license">Driver License</string>
    <string name="profile_pic">profile_pic</string>
    <string name="back_button">back_button</string>
    <string name="search">Search</string>
    <string name="log_out">Log Out</string>
    <string name="help">Help</string>
    <string name="physical_address">Physical Address</string>
    <string name="ride_history">Ride History</string>
    <string name="add_ride">Add ride</string>
    <string name="current_rides">Current Rides</string>
    <string name="my_rides">My Rides</string>
    <string name="make_payments">Make Payments</string>
    <string name="by_cash">By Cash</string>
    <string name="use_wallet">Use Wallet</string>
    <string name="wallet">wallet</string>
    <string name="cash">cash</string>
    <string name="current_balance">Current Balance</string>
    <string name="number_of_people">Number of people</string>
    <string name="available_seats">Available seats</string>
    <string name="number_of_seats">Number of seats</string>
    <string name="choose_your_starting_point">Choose your starting point</string>
    <string name="start">start</string>
    <string name="choose_destination">Choose destination</string>
    <string name="destination">destination</string>
    <string name="pickup_time">Pickup time</string>
    <string name="car_model">Car model</string>
    <string name="instruction">instruction</string>
    <string name="offer">Offer</string>
    <string name="special_instruction_eg_pets_luggage">Special instruction (eg pets, luggage)</string>
    <string name="type_a_message">Type a message</string>
    <string name="select_user">Select user</string>
    <string name="online">Online</string>
    <string name="your_added_vehicles_will_appear_here">Your added vehicles will appear here</string>
    <string name="string">non</string>
    <string name="non" />
    <string name="part1">All registered drivers should provide a valid and an updated drivers licence, national Id and registered vehicle(s). Failure to follow this rule would result into losing the driver account</string>
    <string name="part2">The driver is supposed to abid by all traffic rules. No driving while drunk, no driving while smoking, no driving while on a phone call or texting using a phone. Failure to abid by this rule would mean being arrested and even losing the driver account.</string>
    <string name="terms_and_conditions">TERMS AND CONDITIONS</string>
    <string name="part3">Drivers should make sure that their vehicle(s) are serviced at regular basis to make sure they are safe and to guarantee the safety of customers</string>
    <string name="customer1">Customers should make sure to provide a valid and an updated nation ID. Failure to do that would result into losing an account</string>
    <string name="customer2">Customers who book a ride should make sure to take the booked car unless a valid reason is provided for not doing so. Failure to follow this rule would result into a penalty which will be charged immediately. Failure to pay the penalty would result into an account being blocked</string>
    <string name="todo">TODO</string>
    <string name="total_rides">Total Rides</string>
    <string name="_400">400</string>
    <string name="settings">Settings</string>
    <string name="terms_and_conditions1">Terms and Conditions</string>
    <string name="contact_support">Contact Support</string>
    <string name="faq">FAQ</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="verified_profile">Verified Profile</string>
    <string name="_5744">5744</string>
    <string name="as_rider">as rider</string>
    <string name="as_passenger">as passenger</string>
    <string name="_5_7">5.7</string>
    <string name="_277">(277)</string>
    <string name="personal_information">Personal Information</string>
    <string name="name_national_id_email_physical_address">Name, National ID, Email, Physical Address</string>
    <string name="book_a_ride">Book a ride</string>
    <string name="q">!</string>
    <string name="hey">Hey</string>
    <string name="notifications">Notifications</string>
    <string name="x">X</string>
    <string name="booking_was_rejected">Booking was rejected</string>
</resources>