<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".driver_my_payments">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_payments"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp">
            <ImageView

                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/cash_icon"
                android:contentDescription="@string/cash" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_cash"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp">
            <ImageView

                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/debit_card"
                android:contentDescription="@string/wallet" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_wallet"
                />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>