<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activityClasses.TermsAndConditionsCustomer">
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/term_and_conditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/terms_and_conditions"
        android:gravity="center"
        android:textSize="@dimen/_12sdp"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/part1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/secondary_text"
        app:layout_constraintTop_toBottomOf="@id/term_and_conditions"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/customer1"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/part2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/secondary_text"
        app:layout_constraintTop_toBottomOf="@id/part1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/customer2"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/part3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/secondary_text"
        app:layout_constraintTop_toBottomOf="@id/part2"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/non"/>

</androidx.constraintlayout.widget.ConstraintLayout>